--- a/Backend/package.json
+++ b/Backend/package.json
@@ -39,6 +39,7 @@
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-pie-chart": "^1.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-stripe-checkout": "^2.6.3",
