--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-js-pie-chart": "^1.0.2",
+    "react-typical": "^0.1.3",
     "typescript": "4.9.5",
     "v8": "^0.1.0"
   },
