--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,9 +28,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-images-uploading": "^3.1.7",
     "react-js-pie-chart": "^1.0.2",
     "react-typical": "^0.1.3",
+    "react-uploader": "^3.4.0",
     "typescript": "4.9.5",
+    "uploader": "^3.3.0",
     "v8": "^0.1.0"
   },
   "devDependencies": {
